--- a/src/UI/Blazor/Modules/Login/Components/Login.razor
+++ b/src/UI/Blazor/Modules/Login/Components/Login.razor
@@ -125,23 +125,28 @@
     [Inject]
     public HttpInterceptorService Interceptor { get; set; }
 
+    // protected override void OnInitialized()
+    // {
+    //     Interceptor.RegisterEvent();
+    // }
+
     private async Task HandleLogin()
     {
         var response = await AuthService.Login(LoginDto);
         if (response != null)
         {
-            Interceptor.RegisterEvent();
             await LocalStorage.SetItemAsync("authToken", response.Token);
+            await LocalStorage.SetItemAsync("refreshToken", response.RefreshToken);
             await AuthenticationStateProvider.GetAuthenticationStateAsync();
-            navigationManager.NavigateTo("/");
+            navigationManager.NavigateTo("/dashboard");
         }
         else
         {
         }
     }
 
-    public void Dispose()
-    {
-        Interceptor.DisposeEvent();
-    }
+    // public void Dispose()
+    // {
+    //     Interceptor.DisposeEvent();
+    // }
 }
