--- a/src/UI/Blazor/Modules/Login/Components/Login.razor
+++ b/src/UI/Blazor/Modules/Login/Components/Login.razor
@@ -133,7 +133,7 @@
             Interceptor.RegisterEvent();
             await LocalStorage.SetItemAsync("authToken", response.Token);
             await AuthenticationStateProvider.GetAuthenticationStateAsync();
-            navigationManager.NavigateTo("/");
+            navigationManager.NavigateTo("/dashboard");
         }
         else
         {
