--- a/src/UI/Blazor/Modules/User/Pages/User_old.razor
+++ b/src/UI/Blazor/Modules/User/Pages/User_old.razor
@@ -4,6 +4,9 @@
 @using Starter.Blazor.Modules.User.Services
 @inject IJSRuntime JSRuntime
 @inject IUserService UserService
+@using System.Text.Json
+@inject NavigationManager Navigation
+
 
 <div x-data="modal">
     <div class="panel h-full w-full">
@@ -44,8 +47,17 @@
                                 </span>
                             </td>
                             <td>
+
+                                @* <td>
+                            <button type="button" class="btn btn-outline-primary" @onclick="() => EditUser(user)">Edit</button>
+                            <!-- ... (other buttons and modal) ... -->
+                            </td> *@
+
+                                <div x-data="{}">
+                                    <button class="btn btn-outline-primary" x-on:click="() => toggle()" @onclick="() => EditUser(user)">Edit</button>
+                                </div>
                                 @* <button type="button" class="btn btn-outline-danger" @onclick="() => DeleteUser(user)">Delete</button> *@
-                                <div  x-data="deletemodal">
+                                <div x-data="deletemodal">
                                     <!-- button -->
                                     <div>
                                         <button type="button" class="btn btn-outline-danger" @click="toggle">Delete</button>
@@ -53,7 +65,7 @@
 
                                     <!--delete modal -->
                                     <div class="fixed inset-0 bg-[black]/60 z-[999] hidden overflow-y-auto" :class="dopen && '!block'">
-                                        <div class="flex items-center justify-center min-h-screen px-4" >
+                                        <div class="flex items-center justify-center min-h-screen px-4">
                                             <div x-show="dopen" x-transition x-transition.duration.300 class="panel border-0 p-0 rounded-lg overflow-hidden w-full max-w-lg my-8">
                                                 <div class="flex bg-[#fbfbfb] dark:bg-[#121c2c] items-center justify-between px-5 py-3">
                                                     <h5 class="font-bold text-lg">Delete User</h5>
@@ -129,7 +141,7 @@
         <div class="flex items-center justify-center min-h-screen px-4">
             <div x-show="open" x-transition x-transition.duration.300 class="panel border-0 py-1 px-4 rounded-lg overflow-hidden w-full max-w-sm my-8">
                 <div class="flex items-center justify-between p-5 font-semibold text-lg dark:text-white">
-                    Invite User
+                    @modalTitle
                     <button type="button" @click="toggle" class="text-white-dark hover:text-dark">
                         <svg xmlns="http://www.w3.org/2000/svg"
                              width="24px"
@@ -147,7 +159,7 @@
                     </button>
                 </div>
                 <div class="p-5">
-                    <EditForm Model="@inviteUser" OnValidSubmit="InviteUser">
+                    <EditForm Model="@selectedUser" OnValidSubmit="InviteUser">
                         <DataAnnotationsValidator />
                         <div class="relative mb-4">
                             <span class="absolute top-1/2 -translate-y-1/2 ltr:left-3 rtl:right-3 dark:text-white-dark">
@@ -167,7 +179,7 @@
                                              stroke-width="1.5" />
                                 </svg>
                             </span>
-                            <input type="text" placeholder="First Name" class="form-input ltr:pl-10 rtl:pr-10" @bind-value="inviteUser.FirstName" />
+                            <input type="text" placeholder="First Name" class="form-input ltr:pl-10 rtl:pr-10" @bind-value="selectedUser.FirstName" />
                             <p class="mt-1 text-danger"><ValidationMessage For="@(() => inviteUser.FirstName)" /></p>
                         </div>
 
@@ -190,7 +202,7 @@
                                              stroke-width="1.5" />
                                 </svg>
                             </span>
-                            <input type="text" placeholder="Last Name" class="form-input ltr:pl-10 rtl:pr-10" @bind="inviteUser.LastName" />
+                            <InputText type="text" placeholder="Last Name" class="form-input ltr:pl-10 rtl:pr-10" @bind-Value="selectedUser.LastName" />
                         </div>
                         <div class="relative mb-4">
                             <span class="absolute top-1/2 -translate-y-1/2 ltr:left-3 rtl:right-3 dark:text-white-dark">
@@ -210,10 +222,19 @@
                                           stroke-width="1.5" />
                                 </svg>
                             </span>
-                            <input type="text" placeholder="Email" class="form-input ltr:pl-10 rtl:pr-10" @bind="inviteUser.Email" />
+                            <input type="text" placeholder="Email" class="form-input ltr:pl-10 rtl:pr-10" @bind="selectedUser.Email" />
                             <ValidationMessage For="@(() => inviteUser.Email)" />
                         </div>
-                        <button type="submit" class="btn btn-primary w-full">Invite</button>
+                        <button type="submit" class="btn btn-primary w-full">
+                            @if (isEditing)
+                            {
+                                <span>Update</span>
+                            }
+                            else
+                            {
+                                <span>Invite</span>
+                            }
+                        </button>
                     </EditForm>
                 </div>
             </div>
@@ -229,25 +250,31 @@
             toggle() {
                 this.open = !this.open;
             },
-            
+
         };
     }
 
     function deletemodal() {
         return {
-            dopen: false, 
+            dopen: false,
             toggle() {
                 this.dopen = !this.dopen;
             },
-            
+
         };
     }
 </script>
 
+
 @code {
+
+    private string modalTitle = "Invite User";
+    private bool isEditing = false;
     private List<UserlistDto> users = new List<UserlistDto>();
     private PaginationRequest param = new PaginationRequest { PageNumber = 0, PageSize = 10, OrderBy = new[] { "FullName" } };
     private InviteUserDto inviteUser = new InviteUserDto();
+    private UserlistDto selectedUser = new UserlistDto();
+    private async Task<dynamic> modal() => await JSRuntime.InvokeAsync<dynamic>("modal");
     private readonly string toastScriptConstant = @"
         const toast = window.Swal.mixin({
             toast: true,
@@ -261,24 +288,75 @@
     {
         users = await UserService.GetUserlistsAsync(param);
     }
-
-    private async Task InviteUser()
+    private async Task EditUser(UserlistDto user)
     {
-        var result = await UserService.InviteUserAsync(inviteUser);
+        try
+        {
+            isEditing = true;
+            modalTitle = "Edit User";
+            selectedUser = new UserlistDto
+                {
+                    Id = user.Id,
+                    FirstName = user.FirstName,
+                    LastName = user.LastName,
+                    Email = user.Email,
+                };
+
+
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Error: {ex.Message}");
+        }
+    }
+
+
+
+
+    private async Task UpdateUser(UserlistDto user)
+    {
+        var result = await UserService.UpdateUserAsync(user);
+
         if (result.Success)
         {
             showToaster(result.Data, "top");
-
-            inviteUser.FirstName = string.Empty;
-            inviteUser.LastName = string.Empty;
-            inviteUser.Email = string.Empty;
-
+            modal().Result.toggle();
             users = await UserService.GetUserlistsAsync(param);
             StateHasChanged();
         }
         else
         {
             showToaster(result.Messages.FirstOrDefault(), "top");
+        }
+    }
+    private async Task InviteUser()
+    {
+        if (!isEditing)
+        {
+            inviteUser = new InviteUserDto();
+            inviteUser.Email = selectedUser.Email;
+            inviteUser.FirstName = selectedUser.FirstName;
+            inviteUser.LastName = selectedUser.LastName;
+            var result = await UserService.InviteUserAsync(inviteUser);
+            if (result.Success)
+            {
+                showToaster(result.Data, "top");
+
+                inviteUser.FirstName = string.Empty;
+                inviteUser.LastName = string.Empty;
+                inviteUser.Email = string.Empty;
+
+                users = await UserService.GetUserlistsAsync(param);
+                StateHasChanged();
+            }
+            else
+            {
+                showToaster(result.Messages.FirstOrDefault(), "top");
+            }
+        }
+        else
+        {
+            UpdateUser(selectedUser);
         }
     }
 
