--- a/src/UI/Blazor/Layout/Public/NavMenu.razor
+++ b/src/UI/Blazor/Layout/Public/NavMenu.razor
@@ -62,7 +62,7 @@
 
 
                     <li class="nav-item">
-                            <a href="/userlist" class="group">
+                            <a href="/User_old" class="group">
                             <div class="flex items-center">
                                 <svg class="shrink-0 group-hover:!text-primary"
                                      width="20"
