--- a/src/UI/Blazor/Modules/User/Pages/User_old.razor
+++ b/src/UI/Blazor/Modules/User/Pages/User_old.razor
@@ -1,4 +1,4 @@
-﻿@page "/userlist"
+﻿@page "/User_old"
 @using Starter.Blazor.Modules.Common
 @using Starter.Blazor.Modules.User.Models
 @using Starter.Blazor.Modules.User.Services
