--- a/src/UI/Blazor/Modules/User/Pages/User_old.razor
+++ b/src/UI/Blazor/Modules/User/Pages/User_old.razor
@@ -1,4 +1,4 @@
-﻿@page "/userlist"
+﻿@page "/userlist_old"
 @using Starter.Blazor.Core
 @using Starter.Blazor.Modules.Common
 @using Starter.Blazor.Modules.User.Models
