--- a/src/UI/Angular/src/app/modules/project/components/manage-project-modal/manage-project-modal.component.html
+++ b/src/UI/Angular/src/app/modules/project/components/manage-project-modal/manage-project-modal.component.html
@@ -4,9 +4,16 @@
   (onCancel)="resetForm()"
   [closeOnOutsideClick]="false"
 >
-  <ng-template #modalHeader> <div>Create Project</div> </ng-template>
+  <ng-template #modalHeader>
+    <div>{{ projectId ? "Edit Project" : "Create Project" }}</div>
+  </ng-template>
   <ng-template #modalBody>
-    <form class="space-y-5" [formGroup]="formCreateProject" novalidate (keydown.enter)="submitForm()">
+    <form
+      class="space-y-5"
+      [formGroup]="formCreateProject"
+      novalidate
+      (keydown.enter)="submitForm()"
+    >
       <div>
         <label for="projectName">Name</label>
         <app-input
@@ -18,13 +25,12 @@
       </div>
       <div>
         <label for="description">Description</label>
-        <quill-editor
-          style="width: -webkit-fill-available; height: 150px"
-          [modules]="quillModules"
-          placeholder="Enter Description"
+        <app-text-editor
           formControlName="description"
-          [(ngModel)]="quillValue"
-        ></quill-editor>
+          [control]="formCreateProject.controls['description']"
+          [isSubmit]="isSubmitFormCreateProject"
+          placeholder="Enter Description"
+        ></app-text-editor>
       </div>
       <div>
         <label for="deadline">Deadline</label>
